--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^7.2.8",
-    "react-scripts": "5.0.1",
+    "react-redux": "^7.2.9",
+    "react-scripts": "^5.0.1",
     "react-types": "^0.1.0",
-    "redux": "^4.0.5",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,6 +41,6 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.3"
   }
 }
